worker side basic is completed.

--- a/scripts/database/Dockerfile
+++ b/scripts/database/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official PostgreSQL image from the Docker Hub
-FROM kartoza/postgis:15
+FROM postgres:15
 
 # Add the init.sql script to the Docker image
 COPY init.sql /docker-entrypoint-initdb.d/
@@ -11,6 +11,6 @@ ENV POSTGRES_PASSWORD=mypassword123!
 
 # To build and run this container run the following commands
 
-# docker build -t go-stackit-cost-calculator-postgress .
-# docker run --name go-stackit-cost-calculator-postgress -p 5432:5432 -d go-stackit-cost-calculator-postgress
+# docker build -t exinity-task-postgress .
+# docker run --name exinity-task-postgress -p 5432:5432 -d exinity-task-postgress
 
