--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${workspaceFolder}/cmd/api/main.go",
+            "program": "${workspaceFolder}/cmd/worker/main.go",
             "cwd": "${workspaceFolder}", 
             "env": {},
             "args": [],
