k8s pages are added.

--- a/deploy/k8s/postgres/secret.yml
+++ b/deploy/k8s/postgres/secret.yml
@@ -5,6 +5,6 @@ metadata:
   namespace: exinity-task
 type: Opaque
 data:
-  host: <base64-encoded-db-host>
-  username: <base64-encoded-db-username>
-  password: <base64-encoded-db-password>
+  host: Z28tZXhpbml0eS10YXNrLXBvc3RncmVzcw==
+  username: cG9zdGdyZXNz
+  password: bXlwYXNzd29yZDEyMyE=
