--- a/deploy/k8s/postgres/service.yml
+++ b/deploy/k8s/postgres/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: exinity
+  namespace: exinity-task
 spec:
   ports:
     - port: 5432
