--- a/deploy/k8s/api/secret.yml
+++ b/deploy/k8s/api/secret.yml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: db-credentials
+  name: api-db-secret
   namespace: exinity-task
 type: Opaque
 data:
-  host: <base64-encoded-db-host>
-  username: <base64-encoded-db-username>
-  password: <base64-encoded-db-password>
+  POSTGRES_USER: cG9zdGdyZXNz  # "postgress" base64 encoded
+  POSTGRES_PASSWORD: bXlwYXNzd29yZDEyMyE=  # "mypassword123!" base64 encoded
