--- a/deploy/k8s/postgres/secret.yml
+++ b/deploy/k8s/postgres/secret.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: db-credentials
+  name: db-secret
   namespace: exinity-task
 type: Opaque
 data:
-  host: Z28tZXhpbml0eS10YXNrLXBvc3RncmVzcw==
-  username: cG9zdGdyZXNz
-  password: bXlwYXNzd29yZDEyMyE=
+  POSTGRES_DB: ZXhpbml0eV90YXNr             # exinity_task
+  POSTGRES_USER: cG9zdGdyZXNz           # postgress
+  POSTGRES_PASSWORD: bXlwYXNzd29yZDEyMyE=  # mypassword123!
