--- a/deploy/k8s/api/configmap.yml
+++ b/deploy/k8s/api/configmap.yml
@@ -1,8 +1,20 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: app-config
-  namespace: exinity
+  name: go-api-config
+  namespace: exinity-task
 data:
-  BINANCE_STREAM_URL: "wss://stream.binance.com:443"
-  TRADE_SYMBOLS: "btcusdt,ethusdt,pepeusdt"
+  PROVIDER_BINANCE_SCHEME: "wss"
+  PROVIDER_BINANCE_HOST: "stream.binance.com:443"
+  PROVIDER_BINANCE_PATH: "/stream"
+  PROVIDER_BINANCE_KEY: "streams"
+  PROVIDER_BINANCE_SEPARATOR: "@trade"
+  PROVIDER_BINANCE_SYMBOLS: "btcusdt,ethusdt,pepeusdt"
+  SERVICE_NETWORK: "tcp"
+  SERVICE_HOST: ""
+  SERVICE_PORT: "50051"
+  DATABASE_USERNAME: "postgress"
+  DATABASE_PASSWORD: "mypassword123!"
+  DATABASE_HOST: "go-exinity-task-postgress"
+  DATABASE_PORT: "5432"
+  DATABASE_NAME: "exinity_task"
