--- a/deploy/k8s/api/ingress.yml
+++ b/deploy/k8s/api/ingress.yml
@@ -1,19 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: exinity-ingress
-  namespace: exinity
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  name: exinity-task-ingress
+  namespace: exinity-task
 spec:
   rules:
-    - host: exinity.local
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: api
-                port:
-                  number: 80
+  - host: localhost
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: go-exinity-task
+            port:
+              number: 50051
