--- a/deploy/k8s/api/service.yml
+++ b/deploy/k8s/api/service.yml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api
-  namespace: exinity
+  name: go-exinity-task
+  namespace: exinity-task
 spec:
+  type: NodePort
   selector:
-    app: api
+    app: go-exinity-task
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
+    - name: grpc
+      port: 50051       # This is the internal port the service will use
+      targetPort: 50051  # This is the port your API is listening on inside the container
+      nodePort: 30051    # This is the external port on Minikube that will be exposed to your local machine
